<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="265dp"
    android:background="@color/textColorPrimary"
    android:orientation="vertical"
    android:padding="10dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/enter_password"
        android:textColorHint="@color/primaryColor"
        app:boxStrokeColor="@color/primaryDarkColor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/textColorPrimary"
            android:fontFamily="@font/rubik"
            android:lines="1"
            android:textColor="@color/primaryDarkColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/enter_new_password"
        android:textColorHint="@color/primaryColor"
        app:boxStrokeColor="@color/primaryDarkColor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/textColorPrimary"
            android:fontFamily="@font/rubik"
            android:lines="1"
            android:textColor="@color/primaryDarkColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/repeat_new_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/repeat_new_password"
        android:textColorHint="@color/primaryColor"
        app:boxStrokeColor="@color/primaryDarkColor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/repeat_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/textColorPrimary"
            android:fontFamily="@font/rubik"
            android:lines="1"
            android:textColor="@color/primaryDarkColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_btn"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/primaryColor"
            app:strokeColor="@color/primaryColor" />

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:text="@string/submit"
            android:textColor="@color/textColorPrimary" />
    </LinearLayout>
</LinearLayout>