<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="265dp"
        android:layout_margin="10dp"
        android:background="@drawable/background"
        android:orientation="vertical"
        android:padding="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/enter_phone_number"
            android:textColorHint="@color/primaryColor"
            app:boxStrokeColor="@color/primaryDarkColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mail_ed_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/textColorPrimary"
                android:fontFamily="@font/rubik"
                android:lines="1"
                android:textColor="@color/primaryDarkColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/verification_code_layout_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/enter_password"
            android:textColorHint="@color/primaryColor"
            app:boxStrokeColor="@color/primaryDarkColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passw_ed_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/textColorPrimary"
                android:fontFamily="@font/rubik"
                android:lines="1"
                android:textColor="@color/primaryDarkColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/verification_code_again_layout_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/enter_password_again"
            android:textColorHint="@color/primaryColor"
            app:boxStrokeColor="@color/primaryDarkColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passw_again_ed_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/textColorPrimary"
                android:fontFamily="@font/rubik"
                android:lines="1"
                android:textColor="@color/primaryDarkColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/accept_btn_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="5"
            android:fontFamily="@font/rubik"
            android:text="@string/register"
            android:textColor="@color/textColorPrimary" />
    </LinearLayout>

</layout>
